--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
   <script src="cueverse_org_metrics.js"></script>
   <script src="loop_feed.js"></script>
   <script src="https://cueversemonitor.vercel.app/loop_feed.js"></script>
+  <script src="forecast_overlay.js"></script>
 </body>
 </html>
