--- a/index.html
+++ b/index.html
@@ -82,5 +82,6 @@
   <footer class="bg-black py-6 text-center text-sm text-slate-500">
     © 2025 Cueverse Industries. All rights reserved.
   </footer>
+  <script src="campaign_feed.js"></script>
 </body>
 </html>
