Deploy fully optimized Cueverse site

--- a/about.html
+++ b/about.html
@@ -12,23 +12,10 @@
   </div>
 </header>
 
-<main class="text-center px-6 py-20 max-w-6xl mx-auto">
-  <h1 class="text-4xl font-bold mb-4">Welcome to Cueverse Industries</h1>
-  <p class="mb-6 text-lg">We are a multi-brand empire creating innovation at the intersection of AI, community safety, cue sports, and behavioral tech.</p>
-  <div class="grid md:grid-cols-3 gap-6 text-left mt-10">
-    <a href="/brands.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Our Brands</h2>
-      <p>Explore CueRide, Cuelytics, Off the Rails, QSN and more.</p>
-    </a>
-    <a href="/investors.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Investors</h2>
-      <p>Access our pitch decks and funding opportunities.</p>
-    </a>
-    <a href="/contact.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Contact Us</h2>
-      <p>Talk to our team, request a call, or propose a partnership.</p>
-    </a>
-  </div>
+<main class="px-6 py-12 max-w-4xl mx-auto">
+  <h1 class="text-3xl font-bold mb-4">About Cueverse</h1>
+  <p class="mb-4">Cueverse Industries was founded to house a family of aligned, innovative ventures—each focused on solving big problems through real technology, real accountability, and human-first design.</p>
+  <p>From safety-first rideshare to data intelligence for cue sports, Cueverse is building what tomorrow needs—today.</p>
 </main>
 
 <footer class="bg-gray-100 py-6 text-center text-sm text-gray-600 mt-12">
