--- a/brands.html
+++ b/brands.html
@@ -12,22 +12,13 @@
   </div>
 </header>
 
-<main class="text-center px-6 py-20 max-w-6xl mx-auto">
-  <h1 class="text-4xl font-bold mb-4">Welcome to Cueverse Industries</h1>
-  <p class="mb-6 text-lg">We are a multi-brand empire creating innovation at the intersection of AI, community safety, cue sports, and behavioral tech.</p>
-  <div class="grid md:grid-cols-3 gap-6 text-left mt-10">
-    <a href="/brands.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Our Brands</h2>
-      <p>Explore CueRide, Cuelytics, Off the Rails, QSN and more.</p>
-    </a>
-    <a href="/investors.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Investors</h2>
-      <p>Access our pitch decks and funding opportunities.</p>
-    </a>
-    <a href="/contact.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Contact Us</h2>
-      <p>Talk to our team, request a call, or propose a partnership.</p>
-    </a>
+<main class="px-6 py-12 max-w-6xl mx-auto">
+  <h1 class="text-3xl font-bold mb-6">Our Brands</h1>
+  <div class="grid md:grid-cols-2 gap-6">
+    <div class="border p-4 rounded"><h2 class="text-lg font-semibold">CueRide</h2><p>Sober-first rideshare protecting lives and communities.</p></div>
+    <div class="border p-4 rounded"><h2 class="text-lg font-semibold">Cuelytics</h2><p>Next-gen analytics platform for cue sport performance tracking.</p></div>
+    <div class="border p-4 rounded"><h2 class="text-lg font-semibold">QSN</h2><p>The Cue Sports Network: broadcast, compete, connect.</p></div>
+    <div class="border p-4 rounded"><h2 class="text-lg font-semibold">Off the Rails Betting</h2><p>The first betting platform built for cue sports and railbirds.</p></div>
   </div>
 </main>
 
