--- a/index.html
+++ b/index.html
@@ -1,41 +1,79 @@
-<!DOCTYPE html><html lang='en'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Cueverse</title><script src='https://cdn.tailwindcss.com'></script></head><body class='bg-white text-gray-900'>
-<header class="bg-white shadow">
-  <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-    <a href="/index.html" class="text-2xl font-bold text-purple-700">Cueverse</a>
-    <nav class="space-x-4 text-sm">
-      <a href="/about.html" class="hover:text-purple-700">About</a>
-      <a href="/brands.html" class="hover:text-purple-700">Brands</a>
-      <a href="/investors.html" class="hover:text-purple-700">Investors</a>
-      <a href="/press.html" class="hover:text-purple-700">Press</a>
-      <a href="/contact.html" class="hover:text-purple-700">Contact</a>
-    </nav>
-  </div>
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>
+   Cueverse
+  </title>
+<script src="https://cdn.tailwindcss.com">
+</script>
+<meta content="https://cueverse.org" property="og:url"/>
+</head>
+<body class="bg-white text-gray-900">
+<header>
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="brands.html">Brands</a></li>
+<li><a href="team.html">Team</a></li>
+<li><a href="investors.html">Investors</a></li>
+<li><a href="press.html">Press</a></li>
+<li><a href="careers.html">Careers</a></li>
+<li><a href="faq.html">FAQ</a></li>
+<li><a href="contact.html">Contact</a></li>
+<li><a href="login_user.html">User Login</a></li>
+<li><a href="login_driver.html">Driver Login</a></li>
+</ul>
+</nav>
 </header>
 
+
 <main class="text-center px-6 py-20 max-w-6xl mx-auto">
-  <h1 class="text-4xl font-bold mb-4">Welcome to Cueverse Industries</h1>
-  <p class="mb-6 text-lg">We are a multi-brand empire creating innovation at the intersection of AI, community safety, cue sports, and behavioral tech.</p>
-  <div class="grid md:grid-cols-3 gap-6 text-left mt-10">
-    <a href="/brands.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Our Brands</h2>
-      <p>Explore CueRide, Cuelytics, Off the Rails, QSN and more.</p>
-    </a>
-    <a href="/investors.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Investors</h2>
-      <p>Access our pitch decks and funding opportunities.</p>
-    </a>
-    <a href="/contact.html" class="border p-4 rounded hover:shadow">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">Contact Us</h2>
-      <p>Talk to our team, request a call, or propose a partnership.</p>
-    </a>
-  </div>
+<h1 class="text-4xl font-bold mb-4">
+    Welcome to Cueverse Industries
+   </h1>
+<p class="mb-6 text-lg">
+    We are a multi-brand empire creating innovation at the intersection of AI, community safety, cue sports, and behavioral tech.
+   </p>
+<div class="grid md:grid-cols-3 gap-6 text-left mt-10">
+<a class="border p-4 rounded hover:shadow" href="/brands.html">
+<h2 class="text-xl font-semibold text-purple-700 mb-2">
+      Our Brands
+     </h2>
+<p>
+      Explore CueRide, Cuelytics, Off the Rails, QSN and more.
+     </p>
+</a>
+<a class="border p-4 rounded hover:shadow" href="/investors.html">
+<h2 class="text-xl font-semibold text-purple-700 mb-2">
+      Investors
+     </h2>
+<p>
+      Access our pitch decks and funding opportunities.
+     </p>
+</a>
+<a class="border p-4 rounded hover:shadow" href="/contact.html">
+<h2 class="text-xl font-semibold text-purple-700 mb-2">
+      Contact Us
+     </h2>
+<p>
+      Talk to our team, request a call, or propose a partnership.
+     </p>
+</a>
+</div>
 </main>
 
-<footer class="bg-gray-100 py-6 text-center text-sm text-gray-600 mt-12">
-  <p>© 2025 Cueverse Industries</p>
-  <div class="mt-2 space-x-4">
-    <a href="/privacy.html">Privacy</a>
-    <a href="/terms.html">Terms</a>
-  </div>
+
+<footer>
+<p>© 2025 Cueverse Industries. All rights reserved.</p>
+<ul>
+<li><a href="terms.html">Terms &amp; Conditions</a></li>
+<li><a href="privacy.html">Privacy Policy</a></li>
+<li><a href="contact.html">Support</a></li>
+</ul>
 </footer>
-</body></html>
+</body>
+</html>
